se borrar .env para pruebas en heroku

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,5 @@
-PORT = 
-MONGODB_CNN = 
+PORT = 8080
+MONGODB_CNN = mongodb+srv://peropaco:santets123@miclustercafe.us3ff.mongodb.net/cafeDB
 
 //Varias anotaciones sobre el fichero .env-----------------------------------------
 //-No se suele subir a distribución publica el archivo .env  Se suele subir una copia sin las claves.
