--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,6 @@
-PORT = 8080
-MONGODB_CNN = mongodb+srv://peropaco:santets123@miclustercafe.us3ff.mongodb.net/cafeDB
+PORT = 
+MONGODB_CNN = 
+SECRETORPRIVATEKEY=
 
 //Varias anotaciones sobre el fichero .env-----------------------------------------
 //-No se suele subir a distribución publica el archivo .env  Se suele subir una copia sin las claves.
