--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.4",
         "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-validator": "^6.12.1",
+        "google-auth-library": "^7.9.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.3"
     }
