google singIn completed

--- a/.example.env
+++ b/.example.env
@@ -2,6 +2,9 @@ PORT =
 MONGODB_CNN = 
 SECRETORPRIVATEKEY=
 
+GOOGLE_CLIENT_ID= 
+GOOGLE_SECRET_ID= 
+
 //Varias anotaciones sobre el fichero .env-----------------------------------------
 //-No se suele subir a distribución publica el archivo .env  Se suele subir una copia sin las claves.
 //En este caso vamos a introducir en .gitignore el archivo .env y creamo uno de ejemplo donde se vean la variables de entorno que tenemos que configurar
